Issue #36 and Issue #39: Spacing of the styles.less changed to 2 spaces and expand/collapse of textarea on /vent-stream has been added

--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -4018,17 +4018,28 @@ a:hover {
   float: left;
   margin-left: 20px;
   width: 620px;
+  position: relative;
   width: 640px;
   padding-bottom: 10px;
 }
 .vent-form textarea {
-  width: 630px;
-  height: 80px;
+  width: 610px;
+  height: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
+  padding: 12px 10px 9px 10px;
 }
 .vent-form .input-large {
   width: 190px;
   margin-right: 10px;
+}
+.vent-form .btn-close {
+  position: absolute;
+  right: 2px;
+  top: 7px;
+}
+.vent-form .vent-control {
+  padding-right: 10px;
 }
 .vent-search .input-large {
   width: 200px;
@@ -4110,7 +4121,7 @@ a:hover {
 }
 .vent .form-response textarea {
   width: 550px;
-  height: 80px;
+  sheight: 80px;
 }
 .comments li {
   margin: 35px 0;
